--- a/app/src/main/res/layout/activity_news_detail.xml
+++ b/app/src/main/res/layout/activity_news_detail.xml
@@ -54,10 +54,10 @@
                     android:layout_alignParentBottom="true"
                     android:src="@drawable/bottom_shadow"
                     android:id="@+id/img2"
-                    android:layout_alignBottom="@+id/img"
                     android:scaleType="centerCrop"
                     android:layout_width="match_parent"
-                    android:layout_height="80dp" />
+                    android:layout_height="80dp"
+                    tools:ignore="UnknownIdInLayout" />
 
             </RelativeLayout>
 
