--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.haerul.popularnews.MainActivity">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <item
         android:id="@+id/action_search"
@@ -10,8 +9,7 @@
         android:title="Search"
         android:icon="@drawable/ic_search"
         app:actionViewClass="android.widget.SearchView"
-        app:showAsAction="collapseActionView|always"
-        android:theme="@android:style/Theme.Holo.Light.DarkActionBar"/>
+        app:showAsAction="collapseActionView|always" />
 
     <item
         android:id="@+id/action_settings"
